sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: ')' expected but ';' found.
{setValeur(indiceInserer+1,getValeur(indiceInserer);
                                                   ^